# kx_python_flutter_bridge

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  RELEASING.md  project.md  pyproject.toml
flutter_package/kx_python_flutter_bridge/: README.md  pubspec.yaml
flutter_package/kx_python_flutter_bridge/lib/: kx_python_flutter_bridge.dart
flutter_package/kx_python_flutter_bridge/web/: index.html
flutter_package/kx_python_flutter_bridge/windows/: CMakeLists.txt
src/kx_python_flutter_bridge/: __init__.py  __version__.py  jsonrpc_bridge.py  pubspec.yaml  py.typed
src/kx_python_flutter_bridge/jsonrpc/: function_registry.py  protocol.py
src/kx_python_flutter_bridge/lib/: kx_python_flutter_bridge.dart
src/kx_python_flutter_bridge/linux/: CMakeLists.txt
src/kx_python_flutter_bridge/python_package/: README.md  example_usage.py  requirements-dev.txt  requirements.txt
src/kx_python_flutter_bridge/web/: manifest.json
test_py_flt_bridge/: README.md  custom_bridge.py  pubspec.yaml
test_py_flt_bridge/android/app/: build.gradle.kts
test_py_flt_bridge/ios/Runner/: Info.plist
test_py_flt_bridge/ios/Runner.xcodeproj/: project.pbxproj
test_py_flt_bridge/lib/: home_page.dart  main.dart
test_py_flt_bridge/lib/legacy/: bridge_demo_legacy.dart
test_py_flt_bridge/lib/screens/: jsonrpc_bridge_demo.dart
test_py_flt_bridge/linux/: CMakeLists.txt
test_py_flt_bridge/my_py_codes/: __init__.py  bridge_test_functions.py
test_py_flt_bridge/web/: index.html  manifest.json
test_py_flt_bridge/windows/: CMakeLists.txt
tests/: debug_bridge.py  test_bridge.py
(+35 files in other folders)
