
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kx_python_flutter_bridge"
dynamic = ["version"]
description = "Python-Flutter Bridge for seamless integration"
authors = [
    { name = "KhaderX Team", email = "contact@khaderx.com" }
]
maintainers = [
    { name = "KhaderX Team", email = "contact@khaderx.com" }
]
keywords = ["keyword1", "keyword2", "keyword3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    rich,
]

[project.urls]
Homepage = "https://github.com/Khader-X/your-package"
Repository = "https://github.com/Khader-X/your-package"
"Bug Tracker" = "https://github.com/Khader-X/your-package/issues"
Website = "https://KhaderX.com/"
Organization = "https://github.com/Khader-X"
Author = "https://github.com/KhaderX-com"
PyPI = "https://pypi.org/user/KhaderX/"
Blog = "https://khaderabueltayef.blogspot.com/"
Gravatar = "https://gravatar.com/voiddevotedlyf473f5471f"

[project.optional-dependencies]
dev = ["setuptools-scm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kx_python_flutter_bridge.__version__.__version__"}
